loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__generic_bounds_return_type.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait DataSet<T: Clone> {
    fn tag(&self) -> T;
}
pub trait BoundedDataSet<T: Clone>: DataSet<T> {
    fn bound(&self) -> T;
}
pub fn upcast_bounded_to_dataset<T: Clone, __IncanTrait0: BoundedDataSet<T>>(
    value: __IncanTrait0,
) -> impl DataSet<T> {
    return value;
}
pub fn upcast_bounded_to_bounded<T: Clone, __IncanTrait0: BoundedDataSet<T>>(
    value: __IncanTrait0,
) -> impl BoundedDataSet<T> {
    return value;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = ();
}
