loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__generic_methods.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Box {}
impl incan_std_core::reflection::HasClassName for Box {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Box {
    fn __class_name__() -> &'static str {
        "Box"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Box {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Box {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 0] = [];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Box {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Box {
    pub fn get<T: Clone>(&self, value: T) -> T {
        return value;
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Shelf<U> {
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    item: U,
}
impl<U> incan_std_core::reflection::HasClassName for Shelf<U> {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl<U> incan_std_core::reflection::HasTypeClassName for Shelf<U> {
    fn __class_name__() -> &'static str {
        "Shelf"
    }
}
impl<U> incan_std_core::reflection::HasFieldMetadata for Shelf<U> {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl<U> incan_std_core::reflection::HasTypeFieldMetadata for Shelf<U> {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("item"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("item"),
                type_name: incan_std_core::frozen::FrozenStr::new("U"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl<U> Shelf<U> {
    pub fn swap<T: Clone>(&self, value: T) -> T {
        return value;
    }
}
pub trait Echo {
    fn echo<T: Clone>(&self, value: T) -> T;
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Pair {}
impl incan_std_core::reflection::HasClassName for Pair {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Pair {
    fn __class_name__() -> &'static str {
        "Pair"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Pair {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Pair {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 0] = [];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Pair {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Pair {
    pub fn swap<T: Clone, U: Clone>(&self, _: T, right: U) -> U {
        return right;
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct EchoBox {
    marker: i64,
}
impl incan_std_core::reflection::HasClassName for EchoBox {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for EchoBox {
    fn __class_name__() -> &'static str {
        "EchoBox"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for EchoBox {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for EchoBox {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 0] = [];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for EchoBox {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![]
    }
}
impl Echo for EchoBox {
    fn echo<T: Clone>(&self, value: T) -> T {
        return value;
    }
}
impl EchoBox {
    #[inline(never)]
    pub fn echo<T: Clone>(&self, value: T) -> T {
        <Self as Echo>::echo::<T>(self, value)
    }
}
#[derive(Debug)]
struct Wrapper<U>(pub U);
impl<U> incan_std_core::reflection::HasTypeClassName for Wrapper<U> {
    fn __class_name__() -> &'static str {
        "Wrapper"
    }
}
impl<U> Wrapper<U> {
    pub fn echo<T: Clone>(&self, value: T) -> T {
        return value;
    }
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let r#box = Box {};
    let _value: i64 = r#box.get(1);
    let shelf: Shelf<i64> = Shelf { item: 1 };
    let _shelf_value: String = shelf.swap("shelf".to_string());
    let pair = Pair {};
    let _swapped: String = pair.swap("a".to_string(), "b".to_string());
    let echo_box: EchoBox = EchoBox { marker: 1 };
    let _echoed_bool: bool = echo_box.echo(true);
    let wrapper: Wrapper<i64> = Wrapper(1);
    let _echoed_float: f64 = wrapper.echo(1.5);
}
