loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__inferred_reassign.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn bump() -> i64 {
    let mut x = 1;
    x = x + 1;
    return x;
}
fn collatz_inner(n: i64) -> i64 {
    let mut num = n;
    while num != 1 {
        if incan_std_core::num::py_mod_i64(num, 2) == 0 {
            num = incan_std_core::num::py_floor_div_i64(num, 2);
        } else {
            num = 3 * num + 1;
        }
    }
    return num;
}
fn reassign_in_if() -> i64 {
    let mut status = 0;
    if status == 0 {
        status = 1;
    }
    return status;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = println!("{}", bump());
    let _ = println!("{}", collatz_inner(27));
    let _ = println!("{}", reassign_in_if());
}
