loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1370_phantom_type_param.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Clone, incan_derive::IncanClass)]
struct Column<T> {
    sql: String,
    pub __incan_phantom: std::marker::PhantomData<T>,
}
#[automatically_derived]
impl<T: std::fmt::Debug> std::fmt::Debug for Column<T> {
    fn fmt(&self, formatter: &mut std::fmt::Formatter<'_>) -> std::fmt::Result {
        formatter.debug_struct("Column").field("sql", &self.sql).finish()
    }
}
impl<T> incan_std_core::HasFieldInfo for Column<T> {
    fn field_names() -> Vec<&'static str> {
        vec!["sql"]
    }
    fn field_types() -> Vec<&'static str> {
        vec!["String"]
    }
}
impl<T> incan_std_core::reflection::HasClassName for Column<T> {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl<T> incan_std_core::reflection::HasTypeClassName for Column<T> {
    fn __class_name__() -> &'static str {
        "Column"
    }
}
impl<T> incan_std_core::reflection::HasFieldMetadata for Column<T> {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl<T> incan_std_core::reflection::HasTypeFieldMetadata for Column<T> {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("sql"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("sql"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl<T> incan_std_core::reflection::HasFieldValueReflection for Column<T> {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "sql" => Some(format!("{}", self.sql)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("sql".to_string(), format!("{}", self.sql))]
    }
}
impl<T> Column<T> {
    pub fn __mul__(&self, _: T) -> Column<T> {
        return Column::<T> {
            sql: {
                let __parts: [&str; 2usize] = ["(", " * ?)"];
                let __args: Vec<String> = vec![format!("{}", self.sql)];
                incan_std_core::strings::fstring(&__parts, &__args)
            },
            __incan_phantom: std::marker::PhantomData,
        };
    }
}
fn col<T>(name: String) -> Column<T> {
    return Column::<T> {
        sql: name,
        __incan_phantom: std::marker::PhantomData,
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let amount: Column<f64> = col("amount".to_string());
    let total = amount.__mul__(2.0);
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["", ""]; let __args : Vec < String > =
        vec![format!("{}", total.sql)]; incan_std_core::strings::fstring(& __parts, &
        __args) }
    );
    let label = Column::<String> {
        sql: "label".to_string(),
        __incan_phantom: std::marker::PhantomData,
    };
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["", ""]; let __args : Vec < String > =
        vec![format!("{}", label.__mul__("x".to_string()).sql)];
        incan_std_core::strings::fstring(& __parts, & __args) }
    );
    let _ = println!(
        "{}", { let __parts : [& str; 2usize] = ["", ""]; let __args : Vec < String > =
        vec![format!("{:?}", amount)]; incan_std_core::strings::fstring(& __parts, &
        __args) }
    );
}
