loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1461_sorted_dict_keys.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn ordered_keys(values: std::collections::HashMap<String, i64>) -> Vec<String> {
    return {
        let mut __v = (values.keys().cloned().collect::<Vec<_>>()).clone();
        __v.sort();
        __v
    };
}
fn ordered_values(values: std::collections::HashMap<String, i64>) -> Vec<i64> {
    return {
        let mut __v = (values.values().cloned().collect::<Vec<_>>()).clone();
        __v.sort();
        __v
    };
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let values: std::collections::HashMap<String, i64> = [
        ("b".to_string(), 2),
        ("a".to_string(), 1),
        ("c".to_string(), 3),
    ]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    for key in {
        let mut __v = (values.keys().cloned().collect::<Vec<_>>()).clone();
        __v.sort();
        __v
    } {
        let _ = println!("{}", key);
    }
    for value in {
        let mut __v = (values.values().cloned().collect::<Vec<_>>()).clone();
        __v.sort();
        __v
    } {
        let _ = println!("{}", value);
    }
    let _ = println!(
        "{}", incan_std_core::strings::str_join(& ",", & ordered_keys(values.clone()))
    );
    let _ = println!(
        "{}", ::std::convert::identity(ordered_values(values).len() as i64)
    );
}
