loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1462_named_constructor_evaluation_order.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Evidence {
    source: String,
}
impl incan_std_core::reflection::HasClassName for Evidence {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Evidence {
    fn __class_name__() -> &'static str {
        "Evidence"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Evidence {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Evidence {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 1] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("source"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("source"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl incan_std_core::reflection::HasFieldValueReflection for Evidence {
    fn __field_value__(&self, name: &str) -> Option<String> {
        match name {
            "source" => Some(format!("{}", self.source)),
            _ => None,
        }
    }
    fn __field_items__(&self) -> Vec<(String, String)> {
        vec![("source".to_string(), format!("{}", self.source))]
    }
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
struct Document {
    #[expect(dead_code, reason = "retained for Incan private field semantics")]
    evidence: Evidence,
    intent: String,
}
impl incan_std_core::reflection::HasClassName for Document {
    fn __class_name__(&self) -> &'static str {
        <Self as incan_std_core::reflection::HasTypeClassName>::__class_name__()
    }
}
impl incan_std_core::reflection::HasTypeClassName for Document {
    fn __class_name__() -> &'static str {
        "Document"
    }
}
impl incan_std_core::reflection::HasFieldMetadata for Document {
    fn __fields__(
        &self,
    ) -> incan_std_core::frozen::FrozenList<incan_std_core::reflection::FieldInfo> {
        <Self as incan_std_core::reflection::HasTypeFieldMetadata>::__fields__()
    }
}
impl incan_std_core::reflection::HasTypeFieldMetadata for Document {
    fn __fields__() -> incan_std_core::frozen::FrozenList<
        incan_std_core::reflection::FieldInfo,
    > {
        static __INCAN_FIELDS: [incan_std_core::reflection::FieldInfo; 2] = [
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("evidence"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("evidence"),
                type_name: incan_std_core::frozen::FrozenStr::new("Evidence"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
            incan_std_core::reflection::FieldInfo {
                name: incan_std_core::frozen::FrozenStr::new("intent"),
                alias: None,
                description: None,
                wire_name: incan_std_core::frozen::FrozenStr::new("intent"),
                type_name: incan_std_core::frozen::FrozenStr::new("str"),
                has_default: false,
                extra: incan_std_core::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_std_core::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
fn inspect(source: String) -> String {
    return source;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let source = "manifest".to_string();
    let result = {
        let __incan_ctor_arg_0 = inspect(source.to_string());
        let __incan_ctor_arg_1 = Evidence { source: source };
        Document {
            evidence: __incan_ctor_arg_1,
            intent: __incan_ctor_arg_0,
        }
    };
    let _ = println!("{}", result.intent);
}
