loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1464_list_constructor.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use ::std::env::args;
const INTS: incan_std_core::frozen::FrozenList<i64> = incan_std_core::frozen::FrozenList::new(
    &[7],
);
const WORDS: incan_std_core::frozen::FrozenList<&'static str> = incan_std_core::frozen::FrozenList::new(
    &["x"],
);
fn key_list(values: std::collections::HashMap<String, i64>) -> Vec<String> {
    return ((values).keys().cloned()).collect::<Vec<_>>();
}
fn value_list(values: std::collections::HashMap<String, i64>) -> Vec<i64> {
    return ((values).values().cloned()).collect::<Vec<_>>();
}
fn copied(items: Vec<String>) -> Vec<String> {
    return (items).into_iter().collect::<Vec<_>>();
}
fn from_set(items: std::collections::HashSet<i64>) -> Vec<i64> {
    return (items).into_iter().collect::<Vec<_>>();
}
fn from_mut_param(items: &mut Vec<String>) -> Vec<String> {
    let _ = items.push("z".to_string());
    return (items).iter().cloned().collect::<Vec<_>>();
}
fn keys_of(values: std::collections::HashMap<String, i64>) -> Vec<String> {
    return (values).keys().cloned().collect::<Vec<_>>();
}
fn characters(text: String) -> Vec<String> {
    return (text).chars().map(|__incan_ch| __incan_ch.to_string()).collect::<Vec<_>>();
}
fn empty_names() -> Vec<String> {
    let names: Vec<String> = Vec::<String>::new();
    return names;
}
fn byte_values(payload: Vec<u8>) -> Vec<i64> {
    return (payload)
        .iter()
        .map(|__incan_byte| (*__incan_byte) as i64)
        .collect::<Vec<_>>();
}
fn counted() -> Vec<i64> {
    return (0_i64..(3 as i64)).into_iter().collect::<Vec<_>>();
}
fn thawed(frozen: incan_std_core::frozen::FrozenList<i64>) -> Vec<i64> {
    return (frozen).iter().map(|__incan_item| __incan_item.clone()).collect::<Vec<_>>();
}
fn thawed_text(frozen: incan_std_core::frozen::FrozenList<&'static str>) -> Vec<String> {
    return (frozen)
        .iter()
        .map(|__incan_item| __incan_item.to_string())
        .collect::<Vec<_>>();
}
fn from_generator(source: incan_std_core::iter::Generator<i64>) -> Vec<i64> {
    return ::std::iter::Iterator::collect::<Vec<_>>(source);
}
fn from_iterator<
    __IncanTrait0: crate::__incan_std::derives::collection::Iterator<(i64, String)>,
>(pairs: __IncanTrait0) -> Vec<(i64, String)> {
    return ({
        let mut __incan_iter = pairs;
        std::iter::from_fn(move || crate::__incan_std::derives::collection::Iterator::__next__(
            &mut __incan_iter,
        ))
    })
        .collect::<Vec<_>>();
}
fn reused(words: Vec<String>) -> i64 {
    let first = (words.clone()).into_iter().collect::<Vec<_>>();
    let second = (words).into_iter().collect::<Vec<_>>();
    return ::std::convert::identity(first.len() as i64)
        + ::std::convert::identity(second.len() as i64);
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let values: std::collections::HashMap<String, i64> = [
        ("b".to_string(), 2),
        ("a".to_string(), 1),
    ]
        .into_iter()
        .collect::<std::collections::HashMap<_, _>>();
    for key in ((values).keys().cloned()).collect::<Vec<_>>() {
        let _ = println!("{}", key);
    }
    let _ = println!(
        "{}", ::std::convert::identity(key_list(values.clone()).len() as i64)
    );
    let _ = println!(
        "{}", ::std::convert::identity(value_list(values.clone()).len() as i64)
    );
    let _ = println!(
        "{}", ::std::convert::identity(copied(vec!["x".to_string(), "y".to_string()])
        .len() as i64)
    );
    let _ = println!(
        "{}", ::std::convert::identity(from_set([1, 2, 3].into_iter().collect:: <
        std::collections::HashSet < _ >> ()).len() as i64)
    );
    let _ = println!(
        "{}", ::std::convert::identity(from_mut_param(& mut vec!["q".to_string()]).len()
        as i64)
    );
    let _ = println!("{}", ::std::convert::identity(keys_of(values).len() as i64));
    let _ = println!(
        "{}", ::std::convert::identity(characters("abc".to_string()).len() as i64)
    );
    let _ = println!("{}", ::std::convert::identity(empty_names().len() as i64));
    let _ = println!(
        "{}", ::std::convert::identity(byte_values(b"ab".to_vec()).len() as i64)
    );
    let _ = println!("{}", ::std::convert::identity(counted().len() as i64));
    let _ = println!("{}", ::std::convert::identity(thawed(INTS).len() as i64));
    let _ = println!("{}", ::std::convert::identity(thawed_text(WORDS).len() as i64));
    let _ = println!("{}", reused(vec!["p".to_string(), "q".to_string()]));
    let _ = println!(
        "{}",
        ::std::convert::identity(from_generator(incan_std_core::iter::Generator::new((0_i64
        .. (3 as i64)).flat_map(move | value | {
        incan_std_core::iter::Generator::new(std::iter::once(value)) }))).len() as i64)
    );
    let _ = println!(
        "{}", ::std::convert::identity(from_iterator(crate
        ::__incan_std::derives::collection::ZipIterator { left : (crate
        ::__incan_std::derives::collection::ListIterator { items : (vec![1, 2]), index :
        0i64 }), right : (crate ::__incan_std::derives::collection::ListIterator { items
        : (vec!["a".to_string(), "b".to_string()]), index : 0i64 }), left_marker : None,
        right_marker : None, }).len() as i64)
    );
    let arguments = (args()).into_iter().collect::<Vec<_>>();
    let _ = println!("{}", ::std::convert::identity(arguments.len() as i64));
}
