loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1476_empty_list_equality_operands.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn is_empty(values: Vec<String>) -> bool {
    return values == Vec::<String>::new();
}
fn is_not_empty(values: Vec<String>) -> bool {
    return Vec::<String>::new() != values;
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = if !(is_empty(Vec::<String>::new())) {
        panic!("AssertionError");
    };
    let _ = if is_empty(vec!["value".to_string()]) {
        panic!("AssertionError");
    };
    let _ = if !(is_not_empty(vec!["value".to_string()])) {
        panic!("AssertionError");
    };
    let _ = println!("{}", "ok");
}
