loaves/compiler/incan_emit/tests/snapshots/codegen_snapshot_tests__issue1489_loop_variable_returned_owned.snap
---
source: loaves/compiler/incan_emit/tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_std_core::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
fn require_member(
    values: Vec<Vec<String>>,
    name: String,
) -> Result<Vec<String>, String> {
    for row in values.iter() {
        if incan_std_core::strings::str_eq(
            &incan_std_core::collections::list_get(&row, (0) as i64).clone(),
            &name,
        ) {
            return Ok::<Vec<String>, String>(row.clone());
        }
    }
    return Err::<Vec<String>, String>("absent".to_string());
}
fn first_named(names: Vec<String>, name: String) -> Result<String, String> {
    for candidate in names.iter() {
        if incan_std_core::strings::str_eq(&candidate, &name) {
            return Ok::<String, String>(candidate.to_string());
        }
    }
    return Err::<String, String>("absent".to_string());
}
fn collect_named(names: Vec<String>, name: String) -> Result<Vec<String>, String> {
    let mut found: Vec<String> = Vec::<String>::new();
    for candidate in names.iter() {
        if incan_std_core::strings::str_eq(&candidate, &name) {
            let _ = found.push(candidate.to_string());
            return Ok::<Vec<String>, String>(found);
        }
    }
    return Err::<Vec<String>, String>("absent".to_string());
}
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = match require_member(
        vec![vec!["a".to_string(), "b".to_string()], vec!["c".to_string()]],
        "c".to_string(),
    ) {
        Ok(row) => println!("{}", ::std::convert::identity(row.len() as i64)),
        Err(reason) => println!("{}", reason),
    };
    let _ = match first_named(vec!["a".to_string(), "b".to_string()], "b".to_string()) {
        Ok(found) => println!("{}", found),
        Err(reason) => println!("{}", reason),
    };
    let _ = match collect_named(
        vec!["a".to_string(), "b".to_string()],
        "b".to_string(),
    ) {
        Ok(found) => println!("{}", ::std::convert::identity(found.len() as i64)),
        Err(reason) => println!("{}", reason),
    };
}
